Quick spacing fixes

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -48,7 +48,9 @@ nav * {
 }
 
 @media (min-width: 992px) {
-
+    .cover-heading * h1 {
+        font-size: 3.5rem;
+    }
 
 }
 
